# Cv4MiniEngine

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Cv4MiniEngine.sln  DEBUGGING.md  ExternalDependencies.props  PropertySheet.props  README.md
CmdCiv4/: AppGameSetupConfigPanel.cpp  AppGameSetupConfigPanel.h  AppGameSetupMapScript.cpp  AppGameSetupMapScript.h  AppGameSetupPlayerListPanel.cpp  AppGameSetupPlayerListPanel.h  AppGameSetupWindow.cpp  AppGameSetupWindow.h  AppMainMenusState.cpp  AppMainMenusState.h  AppUIUtil.cpp  AppUIUtil.h  AudioSystem.cpp  AudioSystem.h  CLinkListIterator.h  CivIni.cpp  CivIni.h  CmdCiv4.vcxproj  CmdCiv4.vcxproj.filters  CommandLine.cpp  CommandLine.h  Common.cpp  Common.h  Cv4MiniEngineIni.cpp  Cv4MiniEngineIni.h  CvApp.cpp  CvApp.h  CvAppStates.cpp  CvAppUI.cpp  CvButtonPopup.cpp  CvDiplomacyScreen.cpp  CvDiplomacyScreen.h  CvDiplomacyScreenUI.cpp  CvDiplomacyScreenUI.h  CvEngine.cpp  CvEngine.h  CvEngineEnums.cpp  CvEngineEnums.h  CvGInterfaceScreen.cpp  CvGInterfaceScreen.h  (+76 more)
CmdCiv4/DLLInterface/: FMPIManager.cpp  FMPIManager.h  MyCvDLLEngineIFace.cpp  MyCvDLLEngineIFace.h  MyCvDLLEntityIFace.cpp  MyCvDLLEntityIFace.h  MyCvDLLFeature.cpp  MyCvDLLFeature.h  MyCvDLLFlagEntity.cpp  MyCvDLLFlagEntity.h  MyCvDLLInterfaceIFace.cpp  MyCvDLLInterfaceIFace.h  MyCvDLLPlotBuilder.cpp  MyCvDLLPlotBuilder.h  MyCvDLLPython.cpp  MyCvDLLPython.h  MyCvDLLUtility.cpp  MyCvDLLUtility.h  MyCvDLLXml.cpp  MyCvDLLXml.h
CmdCiv4/PythonAPI/: CvPythonExtensions.cpp  CvPythonExtensions.h  CyCamera.cpp  CyCamera.h  CyDiplomacy.cpp  CyDiplomacy.h  CyEngine.cpp  CyEngine.h  CyFractal.cpp  CyGInterfaceScreen.cpp  CyGInterfaceScreen.h  CyGlobeLayerManager.cpp  CyInterface.cpp  CyInterface.h  CyPopup.cpp  CyPopup.h  CyPopupInfo.cpp  CyPopupReturn.cpp  CyPythonMgr.cpp  CyStatistics.h  CyTranslator.cpp  CyTuiDialog.cpp  CyTuiDialog.h  CyUserProfile.cpp  CyUserProfile.h  PythonRegistration.cpp
CommonStuff/: BlockAStar.cpp  CommonStuff.vcxproj  CommonStuff.vcxproj.filters  DynamicLibrary.cpp  FringeSimdAStar.cpp  NatvisFile.natvis  PPM.cpp  PQCoordSimdAStar.cpp  PQSimdAStar.cpp  ProfilerMarkers.cpp  QuadTree.cpp  SimdAStar.cpp  SimdAStarPriorityQueue.cpp  SimdCodeGenTest.cpp  SimdVector.cpp  StaticAsserts.cpp  StatisticsRegistry.cpp  StringConversion.cpp  System.cpp  TradeNetworkCore.cpp  TradeNetworkSystem.cpp  WorkStealingParallelFor.cpp
Cv4CommonEngineLib/: AudioXmlDefs.cpp  CivIni.cpp  Common.cpp  Common.h  CommonEngine.cpp  CommonEngineGlobal.h  CompressionBinaryStream.cpp  CompressionBinaryStream.h  Cv4CommonEngineLib.vcxproj  Cv4CommonEngineLib.vcxproj.filters  CvAppStates.cpp  CvAppUtil.cpp  CvAppUtil.h  CvButtonPopup.cpp  CvEngine.cpp  CvInterface.cpp  CvPopup.cpp  CvTranslator.cpp  CvUserProfile.cpp  CvVFS.cpp  DLLMessageQueue.cpp  IniReader.cpp  MyCvDLLEngineIFace.cpp  MyCvDLLEngineIFace.h  MyCvDLLFAStar.cpp  MyCvDLLFAStar.h  MyCvDLLInterfaceIFace.cpp  MyCvDLLInterfaceIFace.h  MyCvDLLPython.cpp  MyCvDLLUtility.cpp  MyCvDLLUtility.h  MyCvDLLXml.cpp  MyCvDLLXml.h  PythonPopup.cpp  PythonPopup.h
Cv4CommonEngineLib/PythonAPI/: CvPythonExtensionsSetup.cpp  CvPythonExtensionsSetup.h  CyCamera.cpp  CyCamera.h  CyCommon.cpp  CyCommon.h  CyDiplomacy.cpp  CyDiplomacy.h  CyEngine.cpp  CyEngine.h  CyEngineEnums.cpp  CyFractal.cpp  CyFractal.h  CyGlobeLayerManager.h  CyInterface.cpp  CyInterface.h  CyPopup.cpp  CyPopup.h  CyPopupInfo.cpp  CyPopupInfo.h  CyPopupReturn.cpp  CyPopupReturn.h  CyPythonMgr.cpp  CyPythonMgr.h  CyStatistics.cpp  CyTranslator.cpp  CyTranslator.h  CyUserProfile.cpp  CyUserProfile.h
Cv4HeadlessEngine/: CommandLine.cpp  CommandLine.h  Cv4HeadlessEngine.vcxproj  Cv4HeadlessEngine.vcxproj.filters  GameRunScope.cpp  GameRunScope.h  main.cpp
CvGameCoreDLL/: AI_Defines.h  CLinkListIterator.h  CommonConfig.h  CommonDLLOnly.cpp  CommonDLLOnly.h  CommonShared.cpp  CommonShared.h  CvArea.cpp  CvArea.h  CvArtFileMgr.cpp  CvArtFileMgr.h  CvCity.cpp  CvCity.h  CvCityAI.cpp  CvCityAI.h  CvDLLButtonPopup.cpp  CvDLLButtonPopup.h  CvDLLEngineIFaceBase.h  CvDLLEntity.cpp  CvDLLEntity.h  CvDLLEntityIFaceBase.h  CvDLLFAStarIFaceBase.h  CvDLLFlagEntityIFaceBase.h  CvDLLIniParserIFaceBase.h  CvDLLInterfaceIFaceBase.h  CvDLLInterfaceImplementations.cpp  CvDLLPlotBuilderIFaceBase.h  CvDLLPython.cpp  CvDLLPythonIFaceBase.h  CvDLLSymbolIFaceBase.h  CvDLLUtilityIFaceBase.h  CvDLLWidgetData.cpp  CvDLLXMLIFaceBase.h  CvDeal.cpp  CvDeal.h  CvDefines.h  CvDiploParameters.cpp  CvDiploParameters.h  CvDiplomacyController.cpp  CvDiplomacyController.h  (+170 more)
CvGameCoreDLL/GiganticMapsOptimisationsLib/: AIParallelUnitUpdate.cpp  AIPlotTargetMap.cpp  (+51 more)
FortsneksTestBot/: AssignmentProblem.cpp  AssignmentProblem.h  Bot.cpp  CityBuildingProductionAdvisor.cpp  CityBuildingProductionAdvisor.h  CityProduction.cpp  CityProduction.h  Common.h  DomesticAdvisor.cpp  DomesticAdvisor.h  DomesticAnalysis.cpp  DomesticAnalysis.h  DynamicArray2D.h  FortsneksTestBot.vcxproj  FortsneksTestBot.vcxproj.filters  MapUnitLookup.h  MilitaryAdvisor.cpp  MilitaryAdvisor.h  Pathing.cpp  Pathing.h  ProductionDemand.h  ResearchAdvisor.cpp  ResearchAdvisor.h  SettlingAdvisor.cpp  SettlingAdvisor.h  UnitProductionDemand.h  dllmain.cpp
HeckConsoleUI/: AnsiParser.cpp  AnsiParser.h  BasicLayouts.cpp  Button.cpp  Checkbox.cpp  Combobox.cpp  ConsoleDevice.cpp  Control.cpp  Core.cpp  FlowLayout.cpp  Framebuffer.cpp  HVRule.cpp  HeckConsoleUI.vcxproj  HeckConsoleUI.vcxproj.filters  Label.cpp  LayoutBuilder.cpp  ResizableElement.cpp  ResizablePanel.cpp  ScrollPanel.cpp  Scrollbar.cpp  Slider.cpp  TableLayout.cpp  Textbox.cpp  UIScene.cpp  Util.h  Window.cpp
HeckTUIInputTest/: HeckTUIInputTest.vcxproj  main.cpp
PlayerBotGameBinding/: DLLDefs.cpp  EnumStrings.cpp  GameStructs.cpp  PlayerBotGameBinding.vcxproj  PlayerBotGameBinding.vcxproj.filters
TestDynamicGridConnectivity/: TestDynamicGridConnectivity.vcxproj  main.cpp
TestSimd/: GenericVector.h  TestSimd.cpp  TestSimd.vcxproj  TestSimd.vcxproj.filters
cmake/: Cv4MiniEngine Attach GDB.desktop  Launcher.desktop.in  ShowLog.desktop  ShowLog.ps1  pybind11_stl.patch
(+219 files in other folders)
